--- a/StormDataAnalysis.Rmd
+++ b/StormDataAnalysis.Rmd
@@ -1,4 +1,17 @@
-# Analysis of U.S. National Oceanic and Atmospheric Administration's (NOAA) Storm Database
+---
+title: "The cost, both human and financial, of storm events"
+author: "I Carter (Coursera)"
+output: 
+  html_document:
+    keep_md: true
+    toc: true
+---
+
+## Synopsis
+
+In this project I carried out an analysis of the U.S. National Oceanic and Atmospheric Administration's (NOAA) Storm Database. I recorded my exploratory analysis in `ExploratoryAnalysis.Rmd`.
+
+----
 
 ## Data Processing
 
@@ -10,90 +23,92 @@ data <- read.csv(bz)
 close(bz)
 ```
 
-### Take a first look at dataset
+----
+
+### Most Harmful `EVTYPE`s
+
+***Across the United States, which types of events (as indicated in the `EVTYPE` variable) are most harmful with respect to population health?***
+
+#### How many fatalities and injuries in total?
 
 ```{r echo = TRUE}
-dim(data)       ## 902297 records, 37 columns
-str(data)
-colnames(data)
+total_deaths <- sum(data$FATALITIES)
+total_deaths    ## 15145
+total_injuries <- sum(data$INJURIES)
+total_injuries  ## 140528
 ```
 
- [1] "STATE__"    "BGN_DATE"   "BGN_TIME"   "TIME_ZONE"  "COUNTY"    
- [6] "COUNTYNAME" "STATE"      "EVTYPE"     "BGN_RANGE"  "BGN_AZI"   
-[11] "BGN_LOCATI" "END_DATE"   "END_TIME"   "COUNTY_END" "COUNTYENDN"
-[16] "END_RANGE"  "END_AZI"    "END_LOCATI" "LENGTH"     "WIDTH"     
-[21] "F"          "MAG"        "FATALITIES" "INJURIES"   "PROPDMG"   
-[26] "PROPDMGEXP" "CROPDMG"    "CROPDMGEXP" "WFO"        "STATEOFFIC"
-[31] "ZONENAMES"  "LATITUDE"   "LONGITUDE"  "LATITUDE_E" "LONGITUDE_"
-[36] "REMARKS"    "REFNUM"    
-
-### How many fatalities and injuries?
+#### Which are the top ten fatal event types?
 
 ```{r echo = TRUE}
-sum(data$FATALITIES)    ## 15145
-sum(data$INJURIES)      ## 140528
+fatal <- tapply(data$FATALITIES, data$EVTYPE, sum)
+fatal_percentage <- fatal/total_deaths * 100
+fatal[which.max(fatal)]         ## which is the most fatal event type?
+fatal_indices <- order(fatal, decreasing=TRUE)
+fatal[fatal_indices[1:10]]
+fatal_percentage[fatal_indices[1:10]]
 ```
 
-### Looking at events per state
-
-#### Mystery States
+#### Which are the top ten injurious event types?
 
 ```{r echo = TRUE}
-str(data$STATE)                                 ## 72 levels???
-temp <- levels(data$STATE) %in% state.abb       ## which are not in state.abb?
-levels(data$STATE)[!temp]                       ## 22 mystery state codes...
-```
-#### How many events for the mystery states?
-
-```{r echo = TRUE}
-states <- summary(data$STATE)
-states[levels(data$STATE)[!temp]]       ## look at the 22 mystery states
-sum(states[levels(data$STATE)[!temp]])  ## 19111
+injurious <- tapply(data$INJURIES, data$EVTYPE, sum)
+injurious_percentage <- injurious/total_injuries * 100
+injurious[which.max(injurious)]    ## which is the most injurious event type?
+injurious_indices <- order(injurious, decreasing=TRUE)
+injurious[injurious_indices[1:10]]
+injurious_percentage[injurious_indices[1:10]]
 ```
 
-### Which State has had the most events?
+## The Most Dangerous Event Types
 
 ```{r echo = TRUE}
-max(summary(data$STATE))        ## 83728
-which.max(summary(data$STATE))  ## Texas (TX, 63)
+par(mfrow=c(2, 1), cex=0.8)
+barplot(fatal[fatal_indices[1:10]], axisnames=FALSE,
+    col = hcl.colors(10, palette="Spectral"), legend=TRUE)
+title("Top Ten Causes of Fatality")
+barplot(injurious[injurious_indices[1:10]], axisnames=FALSE,
+    col = hcl.colors(10, palette="Spectral"), legend=TRUE)
+title("Top Ten Causes of Injury")
 ```
 
-### Looking at dates
+----
 
-#### Do all the dates "play nicely"?
+### Costliness
 
-I.e. does `POSIXlt()` work OK with all the dates?
+***Across the United States, which types of events have the greatest economic consequences?***
 
-```{r echo = TRUE}
-sum(is.na(as.POSIXlt(levels(data$BGN_DATE), format="%m/%d/%Y")))        ## 0
-sum(is.na(as.POSIXlt(levels(data$END_DATE), format="%m/%d/%Y")))        ## 1
-```
-
-#### A Closer Look at End Dates
+The relevant columns seem to be `PROPDMG`, `PROPDMGEXP`, `CROPDMG`, and `CROPDMGEXP`.
 
 ```{r echo = TRUE}
-str(data$END_DATE)      ## some of the end dates are missing values (i.e. "")
-sum(data$END_DATE == "")                                ## 243411 missing values
-sum(data$END_DATE == "")/length(data$END_DATE) * 100    ## about 27%
+levels(data$PROPDMGEXP)
+levels(data$CROPDMGEXP)
+summary(data$CROPDMGEXP)
+summary(data$PROPDMGEXP)
 ```
 
 ```{r echo = TRUE}
+prop0 <- data[data$PROPDMG == 0,]
+dim(prop0)
+
+crop0 <- data[data$CROPDMG == 0,]
+dim(prop0)
 ```
 
-```{r echo = TRUE}
-```
-
-```{r echo = TRUE}
-```
+----
 
 ## Results
 
 The questions that need answers are:
 
-### Most Harmful EVTYPEs
+### Most Harmful `EVTYPE`s
 
-Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?
+Across the United States, which types of events (as indicated in the `EVTYPE` variable) are most harmful with respect to population health?
 
 ### Economic Consequences
 
 Across the United States, which types of events have the greatest economic consequences?
+
+----
+
+This document was processed on: `r Sys.Date()`.
